Adds online stream section to the event page
Adds a new section for the online stream, including a Zoom link and QR code.
This allows users to easily join the event remotely.
Also, refactors image assets into a dedicated folder.

--- a/index — копия.html
+++ b/index — копия.html
@@ -19,6 +19,7 @@
                 <a href="#program">Программа</a>
                 <a href="#location">Место проведения</a> <!-- Added location link -->
                 <a href="#registration">Регистрация</a>
+                <a href="#online">Онлайн-трансляция</a>
             </nav>
             <a href="#registration" class="button primary">Принять участие</a>
         </div>
@@ -74,6 +75,20 @@
         </div>
     </section>
 
+    <section id="online" class="online-stream">
+        <div class="container">
+            <h2 class="section-title">Онлайн-трансляция</h2>
+            <p>Присоединяйтесь к нам онлайн!</p>
+            <a href="https://us04web.zoom.us/j/77506831720?pwd=IbgWs3xQanJjY8EPE6aYqM6MKoGaHL.1" target="_blank"
+                class="button primary">Ссылка на трансляцию Zoom</a>
+            <p>Или отсканируйте QR-код:</p>
+            <div class="qr-code-container">
+                <img src="image/Zoom.png" alt="QR-код для онлайн-трансляции" class="qr-code">
+            </div>
+        </div>
+    </section>
+    
+
     <section id="registration" class="registration">
         <div class="container">
             <h2 class="section-title">Регистрация</h2>
@@ -95,6 +110,8 @@
             <div id="registration-message" class="message"></div>
         </div>
     </section>
+
+    
 
     <footer>
         <div class="container">
